--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -310,40 +310,40 @@
  mothership_equipment_desc:0 "The Parasite Fighter Carrier is a strategic bomber that was converted to a mothership that carries two diminute fighters."
  ATL_VLFP_tech:0 "VLFP"
  ATL_VLFP_tech_desc:0 "Very Large Floating Platforms are floating concrete-based structures that serve a range of purposes. Atlanteans managed to turn them into large airports that can hold a few hundred airplanes."
- atl.1.t:0 "Search for Itorkanak Cells"
- atl.1.d:0 "We're aware of Itorkanak activity in a certain port area, but we don't have yet their exact location, so we can't do any direct action. We must set up an operation to discover where is the area's command hub."
- atl.1.a:0 "Set up curfews and deploy the police on the streets"
- atl.1.b:0 "Police action in suspicious targets"
- atl.1.c:0 "Undercover action at the harbors"
- atl.2.t:0 "Itorkanak Cell Found"
- atl.2.d:0 "The police found an Itorkanak cell. They are responsible for the gang's activities in their area, and violent police action is expected to take place."
- atl.2.a:0 "Let's take them down!"
- atl.3.t:0 "New Itorkanak Cell Formed"
- atl.3.d:0 "The rumors of a new Itorkanak cell operating in a coastal city were true. There is an increase in the criminal activity around the area as the police is currently avoiding direct conflict."
- atl.3.a:0 "The war goes on..."
- atl.4.t:0 "Itorkanak Attack!"
- atl.4.d:0 "The war on the Itorkanak has been raging for long. Last night they set up bombs on government's assets. While the death toll was minimal, the damage was extensive, and they can only start working again after extensive repairs."
- atl.4.a:0 "Send the firefighters!"
- atl.5.t:0 "Search for Kaprastiak Cells"
- atl.5.d:0 "The Kaprastiak hide deep inside the political parties and worker's unions. They enjoy some popular support. If we wish to uproot them, we should think of the options at hand, as well as their consequences."
- atl.5.a:0 "Interrogate political leaders and bust into factories"
- atl.5.b:0 "Set up police outposts in the hot areas"
- atl.5.c:0 "Infiltrate unions and poor areas"
- atl.6.t:0 "Kaprastiak Cell Found"
- atl.6.d:0 "After an extensive police operation in the downtown, one of the Kaprastiak's command centers has been uncovered. Well armed and paid, the Kaprastiak henchmen are expecting a major incursion from the police on their way."
- atl.6.a:0 "Lock and load!"
- atl.7.t:0 "New Kaprastiak Cell Formed"
- atl.7.d:0 "Although being actively hunted by the government, the Kaprastiak managed to set up a new operations center in a poor district. They were fast in gaining the locals' trust and are recruiting men for their operations."
- atl.7.a:0 "Get the Police Ready!"
- atl.8.t:0 "Kaprastiak Attack"
- atl.8.d:0 "The Kaprastiak targeted an industrial area and bombed several key installations. Nobody died, and the workers aren't willing to give any information concerning the aggressors."
- atl.8.a:0 "The Kaprastiak's hold over the workers is costing us too much"
- atl.9.t:0 "Spying on American Industries and Command Structures"
- atl.9.d:0 "We managed to infiltrate Atlantean spies inside the American industries and their command centers. Now we can choose what kind of documents to look for."
- atl.9.a:0 "Heavy machinery and electronic systems blueprints"
- atl.9.b:0 "Their newest ship designs"
- atl.9.c:0 "Aircraft design research"
- atl.9.e:0 "Infantry and armor projects"
+ atlantis.1.t:0 "Search for Itorkanak Cells"
+ atlantis.1.d:0 "We're aware of Itorkanak activity in a certain port area, but we don't have yet their exact location, so we can't do any direct action. We must set up an operation to discover where is the area's command hub."
+ atlantis.1.a:0 "Set up curfews and deploy the police on the streets"
+ atlantis.1.b:0 "Police action in suspicious targets"
+ atlantis.1.c:0 "Undercover action at the harbors"
+ atlantis.2.t:0 "Itorkanak Cell Found"
+ atlantis.2.d:0 "The police found an Itorkanak cell. They are responsible for the gang's activities in their area, and violent police action is expected to take place."
+ atlantis.2.a:0 "Let's take them down!"
+ atlantis.3.t:0 "New Itorkanak Cell Formed"
+ atlantis.3.d:0 "The rumors of a new Itorkanak cell operating in a coastal city were true. There is an increase in the criminal activity around the area as the police is currently avoiding direct conflict."
+ atlantis.3.a:0 "The war goes on..."
+ atlantis.4.t:0 "Itorkanak Attack!"
+ atlantis.4.d:0 "The war on the Itorkanak has been raging for long. Last night they set up bombs on government's assets. While the death toll was minimal, the damage was extensive, and they can only start working again after extensive repairs."
+ atlantis.4.a:0 "Send the firefighters!"
+ atlantis.5.t:0 "Search for Kaprastiak Cells"
+ atlantis.5.d:0 "The Kaprastiak hide deep inside the political parties and worker's unions. They enjoy some popular support. If we wish to uproot them, we should think of the options at hand, as well as their consequences."
+ atlantis.5.a:0 "Interrogate political leaders and bust into factories"
+ atlantis.5.b:0 "Set up police outposts in the hot areas"
+ atlantis.5.c:0 "Infiltrate unions and poor areas"
+ atlantis.6.t:0 "Kaprastiak Cell Found"
+ atlantis.6.d:0 "After an extensive police operation in the downtown, one of the Kaprastiak's command centers has been uncovered. Well armed and paid, the Kaprastiak henchmen are expecting a major incursion from the police on their way."
+ atlantis.6.a:0 "Lock and load!"
+ atlantis.7.t:0 "New Kaprastiak Cell Formed"
+ atlantis.7.d:0 "Although being actively hunted by the government, the Kaprastiak managed to set up a new operations center in a poor district. They were fast in gaining the locals' trust and are recruiting men for their operations."
+ atlantis.7.a:0 "Get the Police Ready!"
+ atlantis.8.t:0 "Kaprastiak Attack"
+ atlantis.8.d:0 "The Kaprastiak targeted an industrial area and bombed several key installations. Nobody died, and the workers aren't willing to give any information concerning the aggressors."
+ atlantis.8.a:0 "The Kaprastiak's hold over the workers is costing us too much"
+ atlantis.9.t:0 "Spying on American Industries and Command Structures"
+ atlantis.9.d:0 "We managed to infiltrate Atlantean spies inside the American industries and their command centers. Now we can choose what kind of documents to look for."
+ atlantis.9.a:0 "Heavy machinery and electronic systems blueprints"
+ atlantis.9.b:0 "Their newest ship designs"
+ atlantis.9.c:0 "Aircraft design research"
+ atlantis.9.e:0 "Infantry and armor projects"
  develop_akitselo_iron:0 "Develop Steel Plants in Akitselo"
  develop_hemaritsal_iron:0 "Develop Metal Works in Hemaritsal"
  develop_ladskamn_iron:0 "Develop Alloy Plants in Ladskamn"
