fixed localization bugs

--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -227,7 +227,7 @@ WTS_equipment_effort:0 "Ronstal Designs"
 WTS_equipment_effort_desc:0 "The tropical climate of Wrightsylvania is hard on foreign equiptment. Rust and mud are constant issues. We must design our own rifles that are better suited for our climate."
 
 WTS_artillery_effort:0 "Artillery Investments" 
-WTS_artillery_effort_desc:0 "Taking a tour of the battered frontlines of The Great War shows just how powerful and useful artillery can be. We need to invest in developing our own infantry support weaponry.
+WTS_artillery_effort_desc:0 "Taking a tour of the battered frontlines of The Great War shows just how powerful and useful artillery can be. We need to invest in developing our own infantry support weaponry."
 
 WTS_motorization_effort:0 "Wheels of Steel"
 WTS_motorization_effort_desc:0 "The automobile is here to stay. It is only a matter of time before we need our own mechanized fighting vehicles."
@@ -248,10 +248,10 @@ WTS_destroyer_effort:0 "Naval Improvements"
 WTS_destroyer_effort_desc:0 "Our navy may not have a huge coast to defend, but that doesn't mean that it should be outdated!"
 
 WTS_marine_effort:0 "Troops of the Tropics"
-WTS_marine_effort_desc:0 "Our tropical land can be a boon for our troops. With proper training we can mitigate some of the effects the climate has on us and prepare to defend our homeland. 
+WTS_marine_effort_desc:0 "Our tropical land can be a boon for our troops. With proper training we can mitigate some of the effects the climate has on us and prepare to defend our homeland. "
 
 WTS_equipment_effort_3:0 "Improved Tropical Designs"
-WTS_equipment_effort_3_desc:0 "With a small amount of funding we should be able to continue to prepare our Armed Forces for defending our nation effectively in our tropical climate.
+WTS_equipment_effort_3_desc:0 "With a small amount of funding we should be able to continue to prepare our Armed Forces for defending our nation effectively in our tropical climate."
 
 WTS_armor_effort:0 "Tequata Tanks"
 WTS_armor_effort_desc:0 "Other nations have mobile tanks, we have none. We must change this if we are to defend against the aggressors of the world."
