--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -39,7 +39,7 @@
  KLK_olig_cult_3_desc:0 "'Krismis', Valentine's Day and other consumer holidays appropriately promoted could bring a needed boost to our economy and give our people some much needed distraction. We don't have to be French to eat french toast."
  KLK_olig_final:0 "The Deep State"
  KLK_olig_final_desc:0 "The Lefitists continue to hide in the nooks and crannies of government just waiting for a chance to pop out and destroy us. Careful scrutiny of the backgrounds, acquaintances, family members, and associations of government ministers could help us to root out these insurgets."
- KLK_stal_center_1:0 "The Regulatory Organizations"
+ KLK_stal_center_1:0 "The Regulatory Organs"
  KLK_stal_center_1_desc:0 "Departments of government, each with its own mandate, could help to institute the necessary changes in rules and regulations to allow Socialism to flourish."
  KLK_stal_center_2:0 "The Secret Police"
  KLK_stal_center_2_desc:0 "Elimination of the subversive, evil capitalists is necessary to the survival of the Revolution. By providing the police with a covert arm to root out these counterrevolutionaries we can stabilize our nation."
@@ -171,10 +171,13 @@
  KLK_deep_state:0 "The Deep State"
  KLK_emancipation:0 "Liberated Women"
  KLK_community_service:0 "Community Service"
+ KLK_regulatory:0 "Regulatory Organs"
+ KLK_regulatory_2:0 "Regulatory Organs"
  
  ####### tooltips
  01_KLK_mercenary:0 "§gAllows the hiring of mercenary forces \n§"
  01_KLK_anti_mandalism:0 "§gStarts the Anti-Mandalist Operations \n§"
+ mandalism_drift:0 "Daily Mandalism Support"
  
  ####### decisions
  KLK_hiring:0 "Currently Hiring Mercenaries"
