MKU focus tree & loading screen quotes

--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -2,13 +2,13 @@
  LOADING_TIP_87:0 "\"I never said I wanted peace... just the end of this war.\"\n - Lu Chao Min"
  LOADING_TIP_88:0 "\"You drive tanks down the streets, and then expect us to believe you when you call for peace?\"\n - Fijnland's Prime Minister, Willem van den Bergh"
  LOADING_TIP_89:0 "\"Vorwärts! Vorwärts und steche ihnen in die Augen!\"\n - Heinrich Schmidt, F.S.M. Freikorps."
- LOADING_TIP_90:0 "\"You can live your life as a coward, or you die as a hero!\"\n - General Dajjar Zohok addressing his troops a moment before an enemy bullet killed him."
+ LOADING_TIP_90:0 "\"You can live your life as a coward, or you die as a hero!\"\n - General Dajjar Zohoq addressing his troops a moment before an enemy bullet killed him."
  LOADING_TIP_91:0 "\"One dishonor heaped upon another. The heavenly mandate has departed and left us desolate.\"\n - Yang Xinyi Luo addressing the Trinsuyin Parliament before committing suicide."
  LOADING_TIP_92:0 "\"Praise the Lord and pass the ammunition!\"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_93:0 "\"If fighting is sure to result in victory, then you must fight!\"\n - Sun Tzu"
  LOADING_TIP_94:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredicatablity.\"\n - General Miles Dempsey"
  LOADING_TIP_95:0 "\"For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel.\"\n - General Miles Fritzroy"
- LOADING_TIP_96:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Avaskanta Carras"
+ LOADING_TIP_96:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_97:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
  LOADING_TIP_98:0 "\"In wartime, truth is so precious that she should always be attended by a bodyguard of lies.\"\n - Winston Churchill"
  LOADING_TIP_99:0 "\"Vanquished today by mechanical force, in the future we will be able to overcome by a superior mechanical force. The fate of the world depends on it.\"\n - Charles de Gaulle"
@@ -27,3 +27,5 @@
  LOADING_TIP_112:0 " The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
  LOADING_TIP_113:0 "\"Not bad for a frightened school boy with a kite? Eh, Fritz?\"\n - Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
  LOADING_TIP_114:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany."
+ LOADING_TIP_115:0 "\"God does not intend for the atom to be split for war, no matter what the Americans may say.\"\n - Atlantean President Avaskanta Carras"
+ LOADING_TIP_116:0 "\"Every damned time! The Germans ruined Napoleon, they started the Great War and now they're at it again!\"\n - Augustin Lefebvre, Prime Minister of Côte des Manchots "
