--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -21,11 +21,15 @@
  LOADING_TIP_106:0 "\"By bullet, by sword, or by blood - as God wills it!\"\n - British Lemurian Garrison Motto"
  LOADING_TIP_107:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n - Yang Xinyi Luo"
  LOADING_TIP_108:0 "\"My men will follow me into hell and back. I decide when and where they fight - not some worthless bureaucrat in London!\"\n - General Miles Dempsey"
- LOADING_TIP_109:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n - King Wanulu of Qlach upon surrendering to the British."
+ LOADING_TIP_109:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n - King Wanulu of Qlach upon surrendering to the British"
  LOADING_TIP_110:0 "Everything the sea touches is ours\n - Atlantean Marine Motto"
  LOADING_TIP_111:0 "\"Atlantean air power? Ha! A group of frightened school children with kites could do better!\"\n - German Messerschmitt pilot"
  LOADING_TIP_112:0 " The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
  LOADING_TIP_113:0 "\"Not bad for a frightened school boy with a kite? Eh, Fritz?\"\n - Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
- LOADING_TIP_114:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany."
+ LOADING_TIP_114:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany"
  LOADING_TIP_115:0 "\"God does not intend for the atom to be split for war, no matter what the Americans may say.\"\n - Atlantean President Avaskanta Carras"
- LOADING_TIP_116:0 "\"Every damned time! The Germans ruined Napoleon, they started the Great War and now they're at it again!\"\n - Augustin Lefebvre, Prime Minister of Côte des Manchots "
+ LOADING_TIP_116:0 "\"Every damned time! The Germans ruined Napoleon, they started the Great War and now they're at it again!\"\n - Augustin Lefebvre, Prime Minister of Côte des Manchots"
+ LOADING_TIP_117:0 "\"The German Army is so good at playing it by ear because it does its homework, After all they were taught how to cope when the floor falls from under them.\"\n - General Nagutrul Mixernet, Atlantean High Command"
+ LOADING_TIP_118:0 "\"A state has no eternal allies and no perpetual enemies. Only its interests are eternal and perpetual.\"\n - Horujj Uaqril"
+ LOADING_TIP_119:0 "\"Loyalty is a false concept; it can be switched, changed, challenged, and even used as an excuse to hurt the ones it’s for.\"\n - Party Leader Uorq Fasmiqr, Goprug Homeland Party" 
+ LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps" 
