--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -32,4 +32,5 @@
  LOADING_TIP_117:0 "\"The German Army is so good at playing it by ear because it does its homework, After all they were taught how to cope when the floor falls from under them.\"\n - General Nagutrul Mixernet, Atlantean High Command"
  LOADING_TIP_118:0 "\"A state has no eternal allies and no perpetual enemies. Only its interests are eternal and perpetual.\"\n - Horujj Uaqril"
  LOADING_TIP_119:0 "\"Loyalty is a false concept; it can be switched, changed, challenged, and even used as an excuse to hurt the ones it’s for.\"\n - Party Leader Uorq Fasmiqr, Goprug Homeland Party" 
- LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps" 
+ LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps"
+ LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
