Resources for Lemuria

--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -191,3 +191,4 @@
  KLK_hire_infantry:0 "Hire an Infantry Division"
  KLK_hire_mech:0 "Hire a Mechanized Division"
  KLK_regain_land:0 "Regain the Mandalist Territory"
+ develop_repeatable_velaccamaveiyil:0 "Develop Iron Mines in Velaccamaveiyil"
