--- a/localisation/MKU_l_english.yml
+++ b/localisation/MKU_l_english.yml
@@ -1,5 +1,13 @@
 ﻿l_english: 
  MKU_western_tech_aid:0 "Western Technical Aid"
+ MKU_meru_alliance:0 "The Meru Alliance"
+ MKU_kumari_alliance:0 "The Grand Kumari Alliance"
+ MKU_conscription1:0 "Military Appeal"
+ MKU_conscription_tiny:0 "Small Conscription Bonus"
+ MKU_conscription_large:0 "Huge Conscription Bonus"
+ merukumari.1.t:0 "The Meru Alliance Invitation"
+ merukumari.2.t:0 "The Kumari Alliance Proposal"
+ merukumari.3.t:0 "Kumari Annex Meru Kumari?"
  
  MKU_hungry_years:0 "The Hungry Years"
  MKU_hungry_years_desc:0 "The global economic collapse destroyed our already fragile economy. We must determine how we are to recover from this tragedy without burdening our people too much." 
@@ -64,9 +72,9 @@
  MKU_more_military_production:0 "More Military Production"
  MKU_more_military_production_desc:0 "Our first forays into expanding our military production were well received by the armed forces. Let's give them more tools to protect the nation!"
  MKU_southern_defenses:0 "Southern Defenses"
- MKU_southern_defenses_desc:0 "The British, and their thieving colonies, have encroached on our lands for years. We are sure that they are planning to continue their illegal conquests so we must defend against them."
- MKU_southeastern_defenses:0 "Southeastern Defenses"
- MKU_southeastern_defenses_desc:0 "Home to bandits and warlords, the Afrolemurian 'nations' are a hive of scum and villany that we must protect against."
+ MKU_southern_defenses_desc:0 "The British and their thieving colonies have encroached on our lands for years. We are sure that they are planning to continue their illegal conquests so we must defend against them."
+ MKU_southwestern_defenses:0 "Southwestern Defenses"
+ MKU_southwestern_defenses_desc:0 "Home to bandits and warlords, the Afrolemurian 'nations' are a hive of scum and villany that we must protect against."
  MKU_political_will:0 "Political Will"
  MKU_political_will_desc:0 "Sadly, all of the changes that we have been implementing lately have left our people unwilling to accept any further changes for a while."
  MKU_one_people_one_government:0 "One People, One Government"
