--- a/localisation/MKU_l_english.yml
+++ b/localisation/MKU_l_english.yml
@@ -8,6 +8,10 @@
  merukumari.1.t:0 "The Meru Alliance Invitation"
  merukumari.2.t:0 "The Kumari Alliance Proposal"
  merukumari.3.t:0 "Kumari Annex Meru Kumari?"
+ POLITICS_T_MANDRIGONAL_DESC:0 "Tangrivvi Mandrigonal"
+ POLITICS_U_TABRISILLI_DESC:0 "Uppandrasha Tabrisilli"
+ POLITICS_P_NATRISUMNA_DESC:0 "Perdrim Natrisumna"
+ POLITICS_Y_RANDARGARSHA_DESC:0 "Y. Randargarsha"
  
  MKU_hungry_years:0 "The Hungry Years"
  MKU_hungry_years_desc:0 "The global economic collapse destroyed our already fragile economy. We must determine how we are to recover from this tragedy without burdening our people too much." 
@@ -16,7 +20,7 @@
  MKU_appeal_locally:0 "Appeal to Our Kinsfolk"
  MKU_appeal_locally_desc:0 "Instead of asking for help from foreigners we should turn to our close kin, Kumari, for the aid we require."
  MKU_appeal_communism:0 "Appeal to the Soviets"
- MKU_appeal_communism_desc:0 "The decadent Western powers with their rampant Capitalist ideas caused this damage to our economy! The new system of Marxism-Leninism will give the workers the power to overcome the Bourgeoise Elites!"
+ MKU_appeal_communism_desc:0 "The decadent Western powers with their rampant and evil Capitalist ideas caused this damage to our economy! The new system of Marxism-Leninism will give the workers the power to overcome the Bourgeoise Elites!"
  MKU_dig_ourselves_out:0 "Our Country, Our Solution"
  MKU_dig_ourselves_out_desc:0 "The world has now proven beyond a doubt that no one outside of Meru Kumari can be trusted to do anything for the good of our people."
  MKU_west_technical_aid:0 "Western Technical Aid"
