FMU focus updates, minor

--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -99,6 +99,16 @@
  FMU_admit_gdea:1 "Admit The GdEA Into Parliament"
  1_FMU_tt:0 "GdEA becomes an official government party"
  FMU_admit_gdea_desc:1 "The Gesellschaft der Einheimischen Arbeiter has in recent years risen to prominance as a major political player. Pushing for native rights and a more socialist system, they have been a nuisance, but made strides in accomplishing their goal. Perhaps it’s time to face the music, and let the Native communists pursue their mission as an official political party."
+ FMU_an_unexpected_change_of_plans:1 "A Change in Plans"
+ FMU_an_unexpected_change_of_plans_desc:1 "With the GdEA's inclusion in political discourse there has been a sudden change in the national mood. People that were supposedly loyal party members elsewhere have begun flocking to the GdEA's political rallies. Perhaps we should pay more attention to this formerly blacklisted party."
+ FMU_rewrite_constitution:1 "Rewrite the Constitution"
+ FMU_rewrite_constitution_desc:1 "The rise of Communism as a defining force in our government has given us the opportunity, and the momentum, to make some sweeping changes to our constitution that are sorely needed. It may cause a bit of strife, but ultimately it will be best for the people."
+ FMU_soviet_aid:1 "Soviet Aid"
+ FMU_soviet_aid_desc:1 "Our people, or at least the more conservative elements, are resisting the necessary changes that we must make to help the people achieve greatness. We should enlist the help of our friends, the Soviets, to navigate these societal and governmental changes. We could also get their aid in streamlining and modernizing our industry!"
+ FMU_nativisation:1 "Nativisation"
+ FMU_nativisation_desc:1 "For too long have the conservatives of our government dictated policy blindly. Some of our ministers have come up with a brilliant plan to gut the power of these reactionaries - by giving the natives voting rights, and by acknowledging them as the original inhabitants of the land, we can not only empower a group of workers to join the Revolution, but it will enlist them to our side in the political fray."
+ FMU_deepen_democracy:1 "Deepen Democracy"
+ FMU_deepen_democracy_desc:1 "We must further deepen our commitment to the principles of democracy. Anything else would be a betrayal of our founding ideals and of our people!"
  FMU_negotiate_sanctions:1 "Negotiate The Sanctions"
  FMU_negotiate_sanctions_desc:1 "Nearly 20 years have passed since the end of the Great War, and the FMU has been a model nation. Despite the hard hit we took, we have continued to grow, and we have been on good terms with the British and French. We are in a good position to request renegotiation of the steep sanctions placed on us."
  FMU_claims_on_antarctica:1 "Claims On Antarctica"
