--- a/localisation/AML_events_l_english.yml
+++ b/localisation/AML_events_l_english.yml
@@ -73,3 +73,36 @@
  sasr.d:0 "Ever since the last Anglo-Saxon reforms which were a disaster for all people in the colony there have sprung new more radical movements which both oppose and support new reforms. The reforms aimed to extinguish the Anglish culture and repress the many smaller minority ones in an effort to unify the colony, though it backfired horribly as in some areas it ended with small militias forming to protect their people and in other areas heavy protests. Now it's time for us to look at the bill to enact the second reforms, which have been announced by a unified coalition of High Tories and Imperialists. Will we risk even more unrest in an effort to unify further?"
  sasr.a1:0 "Lemuria is English."
  sasr.a2:0 "Resist the reforms."
+ sasr.2.t:0 "Continued reforms."
+ sasr.3.t:0 "Ended reforms."
+ sasr.2.d:0 "The High Tories banded together with the Loyalists and passed the reform legislation."
+ sasr.3.d:0 "The Lemurian Liberals and various anti-reforms parties banded together and blocked the reforms."
+ sasr.2.a1:0 "We will see how this plays out."
+ sasr.3.a1:0 "We will see how this plays out."
+ sasr.99.t:0 "Abolish Anglishism"
+ sasr.99.d:0 "To further unify our people and squash this nationalistic rhetoric we must abolish their organizations, bring back their identity as a people but now we must first decide on our strategy.
+ sasr.99.1:0 "Harsh Crackdown."
+ sasr.99.2:0 "Slow and easy illegalise it."
+ sasr.98.t:0 ""...is who?""
+ sasr.98.d:0 "Now who is this British Lemurian man? The identity which will help unite our people against our foes. Our desire for a good man and what kind of citizen we will want to shape."
+ sasr.98.1:0 "...is a noble, strong and good man!"
+ sasr.98.2:0 "...is a good man."
+ sasr.97.t:0 "Question of the Nobility"
+ sasr.97.d:0 "The nobility have served an important part in our history and have expanded the country a lot thanks to their conquests during the First Generalship, now the question is. Do we maintain 
+ sasr.97.1:0 "Their status in society is undemocratic."
+ sasr.97.2:0 "They're an important part in our culture."
+ sasr.96.t:0 "Agreement with Britain"
+ sasr.96.d:0 "To gain our independence and to be able to form a truly democratic country we must negotiate for our independence from Britain, to form our own seperate realm."
+ sasr.96.1:0 "Send our diplomats to Britain!"
+ sasr.95.t:0 "British-Lemurian Proposal"
+ sasr.95.d:0 "They offer us financial compensation, a good chunk of their economy, if we are to grant this. We would be foolish not to accept."
+ sasr.95.1:0 "Accept the proposal."
+ sasr.94.t:0 "Britain Accepts"
+ sasr.94.d:0 "Now we shall do our part of the agreement and pay them back."
+ sasr.94.1:0 "Lemuria forever free."
+ sasr.93.t:0 "Put together the shipments"
+ sasr.93.d:0 "We must prepare the shipments and payments, and organize for their arrival in Britain."
+ sasr.93.1:0 "Fill the ships."
+ sasr.93.t:0 "Payments from BL"
+ sasr.93.d:0 "Payments coming from BL are arriving in London, as they promised.
+ sasr.93.1:0 "Great!"
