--- a/localisation/AML_ideas_l_english.yml
+++ b/localisation/AML_ideas_l_english.yml
@@ -49,7 +49,7 @@
  the_old_order: "Old Order"
  the_old_order_desc: "An old class of Nobles which are from the first few settlements has managed to maintain control ever since colonization, the Nobles are often said to hold the tightest grip on society though that is often tested."
  imperial_garrison: "Imperial Garrison"
- imperial_garrison_desc: "The Imperial Garrison is the oldest barrier of defense in BL, they've served to protect the people since the early days of settlement and being a member of the I.G. is a big honour."
+ imperial_garrison_desc: "The Imperial Garrison is the oldest barrier of defense in BL, they've served to protect the people since the early days of settlement and being a member of the I.G. is a big honour within BL society."
  newbritisheducation: "New Education"
  newbritisheducation_desc: "A new curriculum has been placed into the school system in place for the old and outdated one."
  iac: "IAC"
@@ -58,3 +58,15 @@
  royalindustry_desc: "A strong industry is vital to keep our economy going, our people working and to maintain stability."
  the_imperial_order: "Imperial Order"
  the_imperial_order_desc: "An old class of Nobles which are from the first few settlements has managed to maintain control ever since colonization, the Nobles are often said to hold the tightest grip on society though that is often tested."
+ better_imperial_garrison: "Imperial Garrison"
+ better_imperial_garrison_desc: "The Imperial Garrison is the oldest barrier of defense in BL, they've served to protect the people since the early days of settlement and being a member of the I.G. is a big honour within BL society."
+ markusthomson: "Markus Thomson"
+ BLM_fascist_politician: "Paul Edward"
+ BLM_peterssen: "John Peterssen"
+ BLM_communist_politician: "Thomas Campbell"
+ BLM_democratic_politician: "Johnston Kennedy Miller"
+ BLM_loyalist_politician: "Johnson White"
+ equal_peoples: "Equal Peoples"
+ equal_peoples_desc: "Now all men and women are legally equal, none hold a special status in the eyes of the government when they're born and they don't hold special powers."
+ payingbritainback: "British Payments"
+ britishlemurianpayments: "British-Lemurian Payments"
