--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -147,6 +147,7 @@
  KLK_military_final_2_desc:0 "Our admirals complain of an insufficient number of hulls to defend our nation. We must produce more to protect ourselves!"
  
  ####### ideas
+ KLK_bunch_of_nice_commies:0 "Mandalism Dominant"
  KLK_bunch_of_ugly_commies:0 "Mandalism on the Rise"
  KLK_bunch_of_ugly_commies_desc:0 "§LMandalism is a quasi-syndicalist ideology that is rooted in the ancient labour sharing customs widespread in the Indo-Lemuria. With Capitalism threatening these traditions, the region is a fertile ground for this reactive movement.§!"
  KLK_bunch_of_ugly_commies_2:0 "Mandalism Challenged"
@@ -159,6 +160,7 @@
  KLK_deregulation_2:0 "Deregulated Market"
  KLK_workers_1:0 "Self-Governing Workers"
  KLK_workers_2:0 "Self-Governing Workers"
+ KLK_workers_3:0 "Self-Governing Workers"
  KLK_decentralized_production:0 "Decentralized Production"
  KLK_militarized_state:0 "Militarized State"
  KLK_cultural_shift:0 "Cultural Reforms"
@@ -173,11 +175,24 @@
  KLK_community_service:0 "Community Service"
  KLK_regulatory:0 "Regulatory Organs"
  KLK_regulatory_2:0 "Regulatory Organs"
+ KLK_reformed_nation:0 "Reformed Nation"
+ KLK_allies_abroad:0 "Allies Abroad"
+ KLK_stal_education:0 "Department of Education"
+ KLK_stal_education_2:0 "Department of Education"
+ KLK_forced_education:0 "Resistance to Governmental Impositions"
+ KLK_revolutions:0 "Preparations for the Great Revolution"
+ KLK_volunteers:0 "Kalari Volunteers"
+ KLK_militias:0 "Local Militias"
+ KLK_healthcare:0 "Universal Healthcare"
+ KLK_improvised_arms:0 "Improvised Arms Factories"
+ KLK_red_kingdom:0 "Support from Peasants"
  
  ####### tooltips
  01_KLK_mercenary:0 "§gAllows the hiring of mercenary forces \n§"
  01_KLK_anti_mandalism:0 "§gStarts the Anti-Mandalist Operations \n§"
- mandalism_drift:0 "Daily Mandalism Support"
+ 01_CLA_mand:0 "Starts the Mandalist event chain in Chola"
+ 01_KUM_mand:0 "Starts the Mandalist event chain in Kumari"
+ 01_LSN_mand:0 "Starts the Mandalist event chain in Lasnova"
  
  ####### decisions
  KLK_hiring:0 "Currently Hiring Mercenaries"
