--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -186,6 +186,11 @@
  KLK_healthcare:0 "Universal Healthcare"
  KLK_improvised_arms:0 "Improvised Arms Factories"
  KLK_red_kingdom:0 "Support from Peasants"
+ KLK_youth_idea:0 "Mobilizing the Youth"
+ KLK_foreigner_idea:0 "Foreigner Forces"
+ KLK_professional:0 "Professional Army"
+ KLK_militia_idea:0 "Large Militias"
+ KLK_militia_idea_2:0 "Large Militias"
  
  ####### tooltips
  01_KLK_mercenary:0 "§gAllows the hiring of mercenary forces \n§"
