--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -167,7 +167,7 @@ WTS_battleship:0 "Battleship Wormwood"
 WTS_battleship_desc:0 "The Great Depresion crippled us, so we commisioned a battleship to keep the steel mills open. The project is coming to completion and we need to find a new way to keep the economy from buckling."
 WTS_battleship_tt:0 "Spawns a battleship of questionable quality."
 
-WTS_industrial_effort:0 "Wrightston Industies"
+WTS_industrial_effort:0 "Wrightston Industries"
 WTS_industrial_effort_desc:0 "Our industry is vital. We need to do everything in our power to keep it functioning at a minimum capacity for as long as possible, at least until the economy recovers."
 
 WTS_naval_effort:0 "Upgrade Wrightston Dockyards"
