--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -191,6 +191,7 @@
  KLK_professional:0 "Professional Army"
  KLK_militia_idea:0 "Large Militias"
  KLK_militia_idea_2:0 "Large Militias"
+ KLK_stal_idea:0 "Secret Police"
  
  ####### tooltips
  01_KLK_mercenary:0 "§gAllows the hiring of mercenary forces \n§"
