Indolemurian Shared tree, 1st draft

--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -34,3 +34,4 @@
  LOADING_TIP_119:0 "\"Loyalty is a false concept; it can be switched, changed, challenged, and even used as an excuse to hurt the ones it’s for.\"\n - Party Leader Uorq Fasmiqr, Goprug Homeland Party" 
  LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps"
  LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
+ LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
